Docker support for deploy now.

--- a/Hapthorn/appsettings.json
+++ b/Hapthorn/appsettings.json
@@ -1,5 +1,8 @@
 {
-  "Logging": {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=db;Port=5432;Database=hapthorn;"
+  },
+    "Logging": {
     "IncludeScopes": false,
     "Debug": {
       "LogLevel": {
