--- a/Hapthorn/appsettings.json
+++ b/Hapthorn/appsettings.json
@@ -2,17 +2,17 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=db;Port=5432;Database=hapthorn;"
   },
-    "Logging": {
-    "IncludeScopes": false,
-    "Debug": {
-      "LogLevel": {
-        "Default": "Warning"
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "System": "Information",
+        "Microsoft": "Information"
       }
     },
-    "Console": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    }
+    "WriteTo": [
+      { "Name": "LiterateConsole" }
+    ],
+    "Enrich": ["FromLogContext"]
   }
 }
