--- a/Hapthorn/appsettings.Development.json
+++ b/Hapthorn/appsettings.Development.json
@@ -2,21 +2,17 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=127.0.0.1;Port=5432;Database=hapthorn;"
   },
-  "Logging": {
-    "IncludeScopes": false,
-    "Debug": {
-      "LogLevel": {
-        "Default": "Debug",
-        "System": "Information",
-        "Microsoft": "Information"
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "System": "Debug",
+        "Microsoft": "Debug"
       }
     },
-    "Console": {
-      "LogLevel": {
-        "Default": "Debug",
-        "System": "Information",
-        "Microsoft": "Information"
-      }
-    }
+    "WriteTo": [
+      { "Name": "LiterateConsole" }
+    ],
+    "Enrich": ["FromLogContext"]
   }
 }
