--- a/Hapthorn.Test/Hapthorn.Test.csproj
+++ b/Hapthorn.Test/Hapthorn.Test.csproj
@@ -7,6 +7,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0-preview-20170628-02" />
     <PackageReference Include="Moq" Version="4.7.99" />
     <PackageReference Include="Npgsql" Version="3.2.5" />
+    <PackageReference Include="Serilog" Version="2.6.0-dev-00894" />
     <PackageReference Include="Should" Version="1.1.20" />
     <PackageReference Include="xunit" Version="2.2.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
