--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: postgres:9.6.5-alpine
     env_file: .env
     volumes:
-      - ./docker_data/pgdata:/var/lib/postgresql/data
+      - ${DEPLOY_PGDATA}:/var/lib/postgresql/data
     ports:
       - "25432:5432"
   app:
